--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,7 @@
                 </div>
             </form>
             <div class="form-group">
-						<span>New user? <a href="/" th:href="@{/registration}">Register
+						<span>New userAccount? <a href="/" th:href="@{/registration}">Register
 								here</a></span>
             </div>
         </div>
