--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -42,7 +42,7 @@
 
             <h1>Registration</h1>
 
-            <form th:action="@{/registration}" method="post" th:object="${user}">
+            <form th:action="@{/registration}" method="post" th:object="${userAccount}">
                 <div class="form-group">
                     <label class="control-label" for="username"> Username </label> <input
                         id="username" class="form-control" th:field="*{username}" required
