Play a bit with navbar

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+>
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Registration and Login App</title>
+    <meta charset="UTF-8">
+    <title>Clonebin</title>
 
     <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+          integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
           crossorigin="anonymous">
 
 </head>
@@ -71,8 +72,7 @@
                 </div>
             </form>
             <div class="form-group">
-						<span>New userAccount? <a href="/" th:href="@{/registration}">Register
-								here</a></span>
+						<span>New userAccount? <a href="/" th:href="@{/registration}">Register here</a></span>
             </div>
         </div>
     </div>
