dodate nove tabele i fragmenti

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Clonebin</title>
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+        crossorigin="anonymous"></script>
         <link rel="stylesheet"
               href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
               integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
@@ -12,35 +15,18 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed"
-                            data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                            aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span> <span
-                            class="icon-bar"></span> <span class="icon-bar"></span> <span
-                            class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#" th:href="@{/}">Registration and Login Module</a>
-                </div>
-                <div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <div th:replace="fragments/header_fragment :: header"></div>
 
-    <br>
-    <br>
-
+        <br>
+        <br>
+        <br>
+        <br>
         <div class="container">
-            <h1>Registration and Login with Spring Boot, Spring Security,
-                Thymeleaf, Hibernate and MySQL</h1>
             <div sec:authorize="isAuthenticated()">
                 Welcome <span sec:authentication="principal.username"> User</span>
             </div>
         </div>
+        
+        <div th:replace="fragments/create_paste_fragment :: create_paste"></div>
     </body>
 </html>
