Finished header fragment and added created_at columns to tables

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 
     </head>
     <body>
-        <div th:replace="fragments/header_fragment :: header"></div>
+        <div th:insert="fragments/header_fragment.html :: header"></div>
 
         <br>
         <br>
