--- a/src/main/resources/templates/fragments/header_fragment.html
+++ b/src/main/resources/templates/fragments/header_fragment.html
@@ -3,10 +3,18 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security5">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Clonebin</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+                crossorigin="anonymous"></script>
+        <link rel="stylesheet"
+              href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+              integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
+              crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top" th:fragment="header">
+        <nav th:fragment="header" class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed"
@@ -16,37 +24,26 @@
                             class="icon-bar"></span> <span class="icon-bar"></span> <span
                             class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#" th:href="@{/}">CloneBin</a>
+                    <a class="navbar-brand" th:href="@{/}">CloneBin</a>
                 </div>
-                <div id="myNavbar" class="collapse navbar-collapse navbar-right">
-                    <ul class="nav navbar-nav">
-                        <div class="dropdown">
-                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                                Dropdown Example
-                                <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">HTML</a></li>
-                                <li><a href="#">CSS</a></li>
-                                <li><a href="#">JavaScript</a></li>
-                            </ul>
-                        </div>
-                    </ul>
-                </div>
-
-                <!--                                <div id="navbar" class="collapse navbar-collapse navbar-right">
-                                                    <ul class="nav navbar-nav">
-                                                        <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}"> 
-                                                                <span class="glyphicon glyphicon-log-out"></span> Logout</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>-->
-                <div id="navbar" class="collapse navbar-collapse navbar-right">
-                    <ul class="nav navbar-nav">
-                        <li sec:authorize="!isAuthenticated()"><a th:href="@{/login}">
-                            <span class="glyphicon glyphicon-log-in"></span> Login</a>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a th:href="@{/}">NEW PASTE</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li sec:authorize="!isAuthenticated()"><a th:href="@{/login}">LOGIN</a></li>
+                    <li sec:authorize="!isAuthenticated()"><a th:href="@{/registration}">SIGN UP</a></li>
+                    <li sec:authorize="isAuthenticated()"><a sec:authentication="principal.username"
+                                                             th:href="@{'/u/' + ${#authentication.name}}">User</a></li>
+                    <li sec:authorize="isAuthenticated()" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a th:href="@{'/u/' + ${#authentication.name}}">My Clonebin</a></li>
+                            <li class="divider"></li>
+                            <li><a th:href="@{/logout}">Log Out</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </nav>
     </body>
