--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,34 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Clonebin</title>
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+                crossorigin="anonymous"></script>
         <link rel="stylesheet"
               href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
               integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
               crossorigin="anonymous">
-
     </head>
     <body>
-        <!-- create navigation bar ( header) -->
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed"
-                            data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                            aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span> <span
-                            class="icon-bar"></span> <span class="icon-bar"></span> <span
-                            class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#" th:href="@{/}">Registration and
-                        Login Module</a>
-                </div>
-            </div>
-        </nav>
-
+        <div th:insert="fragments/header_fragment.html :: header"></div>
         <br>
         <br>
-        <!-- Create HTML registration form -->
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
@@ -42,7 +27,7 @@
                         </div>
                     </div>
 
-                    <h1>Registration</h1>
+                    <h1>Sign Up Page</h1>
 
                     <form th:action="@{/registration}" method="post" th:object="${userAccount}">
                         <div class="form-group">
