clonebin fragment updates

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -58,7 +58,7 @@
                         </div>
                     </form>
                     <div class="form-group">
-                        <span>New userAccount? <a href="/" th:href="@{/registration}">Register here</a></span>
+                        <span>No account? <a href="/" th:href="@{/registration}">Register here</a></span>
                     </div>
                 </div>
             </div>
