--- a/src/main/resources/templates/my_clonebin.html
+++ b/src/main/resources/templates/my_clonebin.html
@@ -18,6 +18,10 @@
     </head>
     <body>
         <div th:insert="fragments/header_fragment.html :: header"></div>
+        <br>
+        <br>
+        <br>
+        <div th:insert="fragments/clonebin_fragment.html :: clonebin"></div>
         
     </body>
 </html>
