--- a/src/main/resources/templates/fragments/clonebin_fragment.html
+++ b/src/main/resources/templates/fragments/clonebin_fragment.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>Clonebin</title>
@@ -14,6 +13,36 @@
               crossorigin="anonymous">
     </head>
     <body>
+        <div th:fragment="clonebin" class="container">
+            <table class="table table-hover table-striped">
+                <thead>
+                <tr>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Email</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>Mary</td>
+                    <td>Moe</td>
+                    <td>mary@example.com</td>
+                </tr>
+                <tr>
+                    <td>July</td>
+                    <td>Dooley</td>
+                    <td>july@example.com</td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+
 
     </body>
 </html>
