Implemented clonebin fragment

--- a/src/main/resources/templates/not_found.html
+++ b/src/main/resources/templates/not_found.html
@@ -19,6 +19,9 @@
         <br>
         <br>
         <br>
+        <div class="container">
+            <div class="alert alert-warning text-center text-danger">This page is no longer available.</div>
+        </div>
 
     </body>
 </html>
