--- a/src/main/resources/templates/fragments/clonebin_fragment.html
+++ b/src/main/resources/templates/fragments/clonebin_fragment.html
@@ -16,33 +16,29 @@
         <div th:fragment="clonebin" class="container">
             <table class="table table-hover table-striped">
                 <thead>
-                <tr>
-                    <th>Firstname</th>
-                    <th>Lastname</th>
-                    <th>Email</th>
-                </tr>
+                    <tr>
+                        <th>TITLE</th>
+                        <th>ADDED</th>
+                        <th>EXPIRES</th>
+                        <th></th>
+                    </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>john@example.com</td>
-                </tr>
-                <tr>
-                    <td>Mary</td>
-                    <td>Moe</td>
-                    <td>mary@example.com</td>
-                </tr>
-                <tr>
-                    <td>July</td>
-                    <td>Dooley</td>
-                    <td>july@example.com</td>
-                </tr>
+                    <tr th:each="paste: ${pastes}">
+                        <td>
+                            <a th:text="${paste.title}" th:href="@{'/' + ${paste.id}}"/>
+                        </td>
+                        <td th:text="${paste.createdAt}"/>
+                        <td th:text="${paste.expiresAt}"/>
+                        <td>
+                            <div th:if="${isOwner}" class="row">
+                                <a th:href="@{'/edit/' + ${paste.id}}" class="btn btn-info" style="width: 75px">Edit</a>
+                                <a th:href="@{'/delete/' + ${paste.id}}" class="btn btn-danger" style="width: 75px">Delete</a>
+                            </div>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
-
         </div>
-
-
     </body>
 </html>
