--- a/src/main/resources/templates/edit_paste.html
+++ b/src/main/resources/templates/edit_paste.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en"
->
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+        crossorigin="anonymous"></script>
+        <link rel="stylesheet"
+              href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+              integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
+              crossorigin="anonymous">
+    </head>
+    <body>
+        <div th:insert="fragments/header_fragment.html :: header"></div>
 
-</body>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <div th:replace="fragments/create_paste_fragment :: create_paste('true')"></div>
+    </body>
 </html>
