--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security5">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>Clonebin</title>
@@ -21,12 +20,7 @@
         <br>
         <br>
         <br>
-        <div class="container">
-            <div sec:authorize="isAuthenticated()">
-                Welcome <span sec:authentication="principal.username"> User</span>
-            </div>
-        </div>
         
-        <div th:replace="fragments/create_paste_fragment :: create_paste"></div>
+        <div th:replace="fragments/create_paste_fragment :: create_paste('false')"></div>
     </body>
 </html>
