--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,13 +36,13 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="username"> Username </label> :
+                            <label for="username"> Username </label>
                             <input type="text" class="form-control" id="username" name="username"
                                    placeholder="Enter Email ID" autofocus="autofocus">
                         </div>
 
                         <div class="form-group">
-                            <label for="password">Password</label>: <input type="password"
+                            <label for="password">Password</label><input type="password"
                                                                            id="password" name="password"
                                                                            class="form-control"
                                                                            placeholder="Enter Password"/>
