Edit paste changes

--- a/src/main/resources/templates/fragments/create_paste_fragment.html
+++ b/src/main/resources/templates/fragments/create_paste_fragment.html
@@ -34,7 +34,7 @@
                         </select>
                     </div>
                     <div class="col-sm-3 checkbox">
-                        <label><input type="checkbox" th:checked="*{changeExpiresAt}">Update expiration time</label>
+                        <label><input type="checkbox" th:field="*{changeExpiresAt}">Update expiration time</label>
                     </div>
                 </div>
             </div>
