Show username and title on paste page

--- a/src/main/resources/templates/paste.html
+++ b/src/main/resources/templates/paste.html
@@ -40,6 +40,13 @@
         <br>
         <br>
         <br>
+        <div class="container text-left">
+            <label th:text="${'Paste owner: ' + pasteOwner}"/>
+        </div>
+        <br>
+        <div class="container text-left">
+            <label th:text="${'Title: ' + title}"/>
+        </div>
         <br>
         <div class="container">
             <table>
