Implemented folder view

--- a/src/main/resources/templates/fragments/clonebin_fragment.html
+++ b/src/main/resources/templates/fragments/clonebin_fragment.html
@@ -13,32 +13,58 @@
               crossorigin="anonymous">
     </head>
     <body>
-        <div th:fragment="clonebin" class="container">
-            <table class="table table-hover table-striped">
-                <thead>
-                    <tr>
-                        <th>TITLE</th>
-                        <th>ADDED</th>
-                        <th>EXPIRES</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="paste: ${pastes}">
-                        <td>
-                            <a th:text="${paste.title}" th:href="@{'/' + ${paste.id}}"/>
-                        </td>
-                        <td th:text="${paste.createdAt}"/>
-                        <td th:text="${paste.expiresAt}"/>
-                        <td>
-                            <div th:if="${isOwner}" class="row">
-                                <a th:href="@{'/edit/' + ${paste.id}}" class="btn btn-info" style="width: 75px">Edit</a>
-                                <a th:href="@{'/delete/' + ${paste.id}}" class="btn btn-danger" style="width: 75px">Delete</a>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div th:fragment="clonebin">
+            <div class="container text-left">
+                <label th:text="${'Clonebin owner: ' + username}"/>
+            </div>
+            <br>
+            <div th:if="${isOwner}" class="container">
+                <table class="table table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>FOLDER NAME</th>
+                            <th>ADDED</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="folder: ${folders}">
+                            <td>
+                                <a th:text="${folder.name}" th:href="@{'/folder/' + ${folder.id}}"/>
+                            </td>
+                            <td th:text="${folder.createdAt}"/>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="container">
+                <table class="table table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>TITLE</th>
+                            <th>ADDED</th>
+                            <th>EXPIRES</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="paste: ${pastes}">
+                            <td>
+                                <a th:text="${paste.title}" th:href="@{'/' + ${paste.id}}"/>
+                            </td>
+                            <td th:text="${paste.createdAt}"/>
+                            <td th:text="${paste.expiresAt}"/>
+                            <td>
+                                <div th:if="${isOwner}" class="row">
+                                    <a th:href="@{'/edit/' + ${paste.id}}" class="btn btn-info" style="width: 75px">Edit</a>
+                                    <a th:href="@{'/delete/' + ${paste.id}}" class="btn btn-danger" style="width: 75px">Delete</a>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </body>
 </html>
